✨ (global.css): add flexbox styles to nav items for better alignment and spacing 🔧 (footer.html): update link for Article to point to the correct route 🔧 (header.html): update navigation links to point to specific categories and add Manage link for admin users

--- a/static/css/styles/global.css
+++ b/static/css/styles/global.css
@@ -225,6 +225,10 @@ header {
     }
 }
 .link ul > li.nav-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
     padding: 0.5rem 1.5rem;
     border-radius: 9999px;
     border: 1px solid var(--c-bg-grey-tertiary);
